Commit t1. Добавления тестов